<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/calc_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/display_padding"
        android:gravity="end"
        android:text=""
        android:textSize="@dimen/expression_text_size"
        android:textColor="@color/calc_expression_text"
        android:maxLines="1"
        android:ellipsize="start"
        android:paddingStart="@dimen/display_padding"
        android:paddingEnd="@dimen/display_padding" />

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:text="@string/btn_0"
        android:textSize="@dimen/display_text_size"
        android:textColor="@color/calc_display_text"
        android:maxLines="1"
        android:paddingStart="@dimen/display_padding"
        android:paddingEnd="@dimen/display_padding"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeStepGranularity="2sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="false"
        android:padding="@dimen/grid_padding">

        <!-- Row 1 -->
        <Button
            android:id="@+id/btn_ac"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_ac" />

        <Button
            android:id="@+id/btn_sign"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_sign" />

        <Button
            android:id="@+id/btn_percent"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_percent" />

        <Button
            android:id="@+id/btn_divide"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_divide" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn_7"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_9" />

        <Button
            android:id="@+id/btn_multiply"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_multiply" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/btn_4"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_6" />

        <Button
            android:id="@+id/btn_subtract"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_subtract" />

        <!-- Row 4 -->
        <Button
            android:id="@+id/btn_1"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/btn_add"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_add" />

        <!-- Row 5 -->
        <Button
            android:id="@+id/btn_0"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_0" />

        <Button
            android:id="@+id/btn_dot"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_circle_number"
            android:textColor="@color/calc_number_text"
            android:text="@string/btn_dot" />

        <Button
            android:id="@+id/btn_equals"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="2"
            android:layout_columnSpan="2"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/bg_pill_red"
            android:textColor="@color/calc_text_on_red"
            android:text="@string/btn_equals" />

    </GridLayout>

</LinearLayout>
